fixed omit source functionality
- improved standalone mode